--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -6,4 +6,18 @@ app_user:
     resource: "@AppBundle/Resources/config/routing/user.yml"
     prefix: /user
 
+app_noticia:
+    resource: "@AppBundle/Resources/config/routing/noticia.yml"
+    prefix: /
+
+app_actividades:
+    resource: "@AppBundle/Resources/config/routing/actividades.yml"
+    prefix: /
+    
+app_proyectos:
+    resource: "@AppBundle/Resources/config/routing/proyectos.yml"
+    prefix: /
+    
+
+
 
